@@ -4,7 +4,9 @@ Changelog
 2.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Merge Rafael Oliveira's (@rafaelbco) plone.namedfile support from
+  collective.dexteritydiff.
+  [rpatterson]
 
 
 2.0.1 (2012-09-01)
